--- a/views/pages/results-search-tweets.ejs
+++ b/views/pages/results-search-tweets.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,8 +11,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
   </head>
-<body>
   
+</head>
+
+<body>
+
+  
+
   <nav class="navbar navbar-default navbar-static-top navbar-inverse">
     <div class="container">
       <ul class="nav navbar-nav">
@@ -19,11 +25,14 @@
           <a href="/"><span class="glyphicon glyphicon-home"></span> Home</a>
         </li>
         
-      <ul class="nav navbar-nav navbar-right">
-        <li class="navbar-right">
-          <a href="/results-twitter"><span class="glyphicon glyphicon-book"></span> Twitter Results</a>
-        </li>
-      </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="navbar-right">
+            <a href="/users-search"><span class="glyphicon glyphicon-book"></span> Twitter Users Search </a>
+          </li>
+          <li class="navbar-right">
+            <a href="/search-tweets"><span class="glyphicon glyphicon-book"></span> Search Tweets</a>
+          </li>
+        </ul>
     </div>
   </nav>
 
@@ -33,20 +42,31 @@
     <a href="/" class="lang-logo">
       <img src="/lang-logo.png">
     </a>
-    <p><%= data %></p>
-    <h1>Getting Started on Heroku with Node.js NITTTTTTTTTTTTTTTTt</h1>
+    <h1>חיפוש ציוצים תשובות </h1>
     <p>This is a sample Node application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
-    <form class="example" action="action_page.php">
-      <input type="text" placeholder="Search.." name="search">
-      <button type="submit"><i class="fa fa-search"></i></button>
-    </form>
+    <% if (data) { %>
+        <% for(var i=0; i<data.length; i++){ %>
+            
+            <table style="width:100%">   
+                <tr>
+                    <th>Id</th>
+                    <th>Content Status</th>
+                </tr>
+                
+                <tr>
+                    <td><%= data[i].id %> </td>
+                    <td><%= data[i].text %> </td>
+                </tr> 
+            </table>
+            <% } %>
+    <% } %>
   </div>
 
- 
+
   
 </div>
 
-    
+
 
 
 </body>
