--- a/views/pages/users-search.ejs
+++ b/views/pages/users-search.ejs
@@ -25,14 +25,14 @@
           <a href="/"><span class="glyphicon glyphicon-home"></span> Home</a>
         </li>
         
-      <ul class="nav navbar-nav navbar-right">
-        <li class="navbar-right">
-          <a href="/users-search"><span class="glyphicon glyphicon-book"></span> Twitter Users Search </a>
-        </li>
-        <li class="navbar-right">
-          <a href="/search-tweets"><span class="glyphicon glyphicon-book"></span> Search Tweets</a>
-        </li>
-      </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="navbar-right">
+            <a href="/users-search"><span class="glyphicon glyphicon-book"></span> Twitter Users Search </a>
+          </li>
+          <li class="navbar-right">
+            <a href="/search-tweets"><span class="glyphicon glyphicon-book"></span> Search Tweets</a>
+          </li>
+        </ul>
     </div>
   </nav>
 
@@ -42,9 +42,12 @@
     <a href="/" class="lang-logo">
       <img src="/lang-logo.png">
     </a>
-    <h1>דף בית </h1>
+    <h1>חיפוש משתמשים</h1>
     <p>This is a sample Node application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
-    
+    <form class="example"  method="GET", action="users-search-api-v1-twitter">
+      <input type="text" placeholder="Search.." name="search">
+      <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
   </div>
 
 
