--- a/views/pages/results-search-tweets.ejs
+++ b/views/pages/results-search-tweets.ejs
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -44,15 +45,17 @@
     </a>
     <h1>חיפוש ציוצים תשובות </h1>
     <p>This is a sample Node application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
+    <table style="width:100%">   
+      <tr>
+          <th>Id</th>
+          <th>Content Status</th>
+      </tr>
+    </table>
     <% if (data) { %>
         <% for(var i=0; i<data.length; i++){ %>
             
             <table style="width:100%">   
-                <tr>
-                    <th>Id</th>
-                    <th>Content Status</th>
-                </tr>
-                
+        
                 <tr>
                     <td><%= data[i].id %> </td>
                     <td><%= data[i].text %> </td>
@@ -71,3 +74,4 @@
 
 </body>
 </html>
+
