--- a/views/pages/results-users-search.ejs
+++ b/views/pages/results-users-search.ejs
@@ -44,23 +44,23 @@
     </a>
     <h1>  תשובות חיפוש משתמשים</h1>
     <p>This is a sample Node application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
-    
+    <table style="width:100%">   
+      <tr>
+          <th>Id</th>
+          <th>Name</th>
+          <th>Screen Name</th>
+          <th>Followers</th>
+          <th>Friends</th>
+          <th>Created At</th>
+          <th>Location</th>
+          <th>Description</th>
+          <th>Demo</th>
+      </tr>
+    </table>
     <% if (data) { %>
       <% for(var i=0; i<data.length; i++){ %>
           
-          <table style="width:100%">   
-              <tr>
-                  <th>Id</th>
-                  <th>Name</th>
-                  <th>Screen Name</th>
-                  <th>Followers</th>
-                  <th>Friends</th>
-                  <th>Created At</th>
-                  <th>Location</th>
-                  <th>Description</th>
-                  <th>Demo</th>
-              </tr>
-              
+          <table style="width:100%">     
               <tr>
                   <td><%= data[i].id %> </td>
                   <td><%= data[i].name %> </td>
