--- a/views/pages/error_tweets.ejs
+++ b/views/pages/error_tweets.ejs
@@ -1,8 +1,7 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Home page</title>
+  <title>Error Search Tweets</title>
   <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
 </head>
@@ -11,14 +10,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
   </head>
-  
-</head>
-
 <body>
-
-  
   <!--Useful Links-->
-
   <nav class="navbar navbar-default navbar-static-top navbar-inverse">
     <div class="container">
       <ul class="nav navbar-nav">
@@ -26,33 +19,37 @@
           <a href="/"><span class="glyphicon glyphicon-home"></span> Home</a>
         </li>
         
-      <ul class="nav navbar-nav navbar-right">
-        <li class="navbar-right">
-          <a href="/users-search"><span class="glyphicon glyphicon-book"></span> Twitter Users Search </a>
-        </li>
-        <li class="navbar-right">
-          <a href="/search-tweets"><span class="glyphicon glyphicon-book"></span> Search Tweets</a>
-        </li>
-      </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="navbar-right">
+            <a href="/users-search"><span class="glyphicon glyphicon-book"></span> Twitter Users Search </a>
+          </li>
+          <li class="navbar-right">
+            <a href="/search-tweets"><span class="glyphicon glyphicon-book"></span> Search Tweets</a>
+          </li>
+        </ul>
     </div>
   </nav>
 
 <div class="jumbotron text-center">
-   <!--About Us-->
+   <!--Search Engine-->
   <div class="container">
     <a href="/" class="lang-logo">
       <img src="/twitter-logo.jpg">
     </a>
-    <h1 style="font-size:200%;"> About Us</h1>
-    <p>This site will help you find tweets on Twitter by entering a word or sequence of words and in addition search for Twitter users easily.</p>
-      
+    <h1 style="font-size:30px";>Something went wrong please try again</h1>    
+    <h1 style="font-size:30px";> Search Tweets</h1>
+
+        <form class="example" action="tweets-search-api-v1-twitter">
+      <input type="text" placeholder="Search.." name="search">
+      <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
   </div>
 
-
+ 
   
 </div>
 
-
+    
 
 
 </body>
