--- a/views/pages/search-tweets.ejs
+++ b/views/pages/search-tweets.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Node.js Getting Started on Heroku</title>
+  <title>Search Tweets</title>
   <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
 </head>
@@ -11,7 +11,7 @@
   
   </head>
 <body>
-  
+  <!--Useful Links-->
   <nav class="navbar navbar-default navbar-static-top navbar-inverse">
     <div class="container">
       <ul class="nav navbar-nav">
@@ -34,11 +34,12 @@
   
   <div class="container">
     <a href="/" class="lang-logo">
-      <img src="/lang-logo.png">
+      <img src="/twitter-logo.jpg">
     </a>
-    <h1>חיפוש ציוצים</h1>
-    <p>This is a sample Node application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
-    <form class="example" action="tweets-search-api-v1-twitter">
+     <!--Search Engine-->   
+    <h1 style="font-size:30px";> Search Tweets</h1>
+
+        <form class="example" action="tweets-search-api-v1-twitter">
       <input type="text" placeholder="Search.." name="search">
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
