--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,32 +1,30 @@
 .jumbotron {
-  background: #4682B4;
-  color: white;
-  padding-bottom: 100px; }
+  background: #f1f3f5;
+  color: #233342;
+  padding-bottom: 100%; }
   .jumbotron .btn-primary {
     background: #845ac7;
     border-color: #845ac7; }
     .jumbotron .btn-primary:hover {
-      background: #7646c1; }
+      background: #0a060e; }
   .jumbotron p {
-    color: #d9ccee;
+    color: #233342;
     max-width: 75%;
     margin: 1em auto 2em; }
   .navbar + .jumbotron {
     margin-top: -20px; }
   .jumbotron .lang-logo {
     display: block;
-    background: #B01302;
-    border-radius: 50%;
     overflow: hidden;
-    width: 100px;
-    height: 100px;
-    margin: auto;
-    border: 2px solid white; }
+    border-radius: 50px;
+    width: 200px;  
+    height: 185px;
+    margin: auto; }
     .jumbotron .lang-logo img {
       max-width: 100%; }
 
 body {
-  font-family: Arial;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 * {
@@ -36,7 +34,7 @@ body {
 form.example input[type=text] {
   padding: 10px;
   font-size: 17px;
-  border: 1px solid grey;
+  border: 1px solid rgb(24, 20, 20);
   float: left;
   width: 80%;
   background: #f1f1f1;
@@ -46,16 +44,16 @@ form.example button {
   float: left;
   width: 20%;
   padding: 10px;
-  background: #778899;
-  color: white;
+  background: #233342;
+  color: rgb(248, 240, 240);
   font-size: 17px;
-  border: 1px solid grey;
+  border: 1px solid rgb(17, 10, 10);
   border-left: none;
   cursor: pointer;
 }
 
 form.example button:hover {
-  background: #0b7dda;
+  background: #2285d6;
 }
 
 form.example::after {
@@ -63,4 +61,26 @@ form.example::after {
   clear: both;
   display: table;
 }
+
+
+table, .th, .td {
+            
+  border: 2px solid black;
+  border-collapse: collapse;
+  border: 2px solid black;
+  table-layout: fixed;
+  width: 100%;  
+  height: 1.5cm;
+  text-align:center
+}
+ th, td {
+  padding: 10px;
+  word-wrap: break-word;
+  width: 100px; 
+}
+
+
+
+
+
 
