--- a/views/pages/results-search-tweets.ejs
+++ b/views/pages/results-search-tweets.ejs
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Node.js Getting Started on Heroku</title>
+  <title>Search results for tweets</title>
   <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
 </head>
@@ -18,7 +18,7 @@
 <body>
 
   
-
+  <!--Useful Links-->
   <nav class="navbar navbar-default navbar-static-top navbar-inverse">
     <div class="container">
       <ul class="nav navbar-nav">
@@ -37,15 +37,15 @@
     </div>
   </nav>
 
-<div class="jumbotron text-center">
+<div class="jumbotron text-left">
   
   <div class="container">
     <a href="/" class="lang-logo">
-      <img src="/lang-logo.png">
+      <img src="/twitter-logo.jpg">
     </a>
-    <h1>חיפוש ציוצים תשובות </h1>
-    <p>This is a sample Node application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
-    <table style="width:100%">   
+    <!--results for tweets-->
+    <h1 style="font-size:30px"> Search results for tweets </h1>
+    <table >   
       <tr>
           <th>Id</th>
           <th>Content Status</th>
@@ -54,7 +54,7 @@
     <% if (data) { %>
         <% for(var i=0; i<data.length; i++){ %>
             
-            <table style="width:100%">   
+            <table >   
         
                 <tr>
                     <td><%= data[i].id %> </td>
@@ -62,7 +62,14 @@
                 </tr> 
             </table>
             <% } %>
-    <% } %>
+    <% }else{ %>
+      
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+          <a href="/search-tweets"><span class="glyphicon glyphicon-book"></span>No results Please try again </a>
+        
+      </ul>
+  <% } %>
   </div>
 
 
