--- a/views/pages/users-search.ejs
+++ b/views/pages/users-search.ejs
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Node.js Getting Started on Heroku</title>
+  <title>Twitter user search</title>
   <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
 </head>
@@ -17,6 +17,7 @@
 <body>
 
   
+  <!--Useful Links-->
 
   <nav class="navbar navbar-default navbar-static-top navbar-inverse">
     <div class="container">
@@ -40,10 +41,11 @@
   
   <div class="container">
     <a href="/" class="lang-logo">
-      <img src="/lang-logo.png">
+      <img src="/twitter-logo.jpg">
     </a>
-    <h1>חיפוש משתמשים</h1>
-    <p>This is a sample Node application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
+    <!--Search Engine-->
+
+    <h1 style="font-size:200%;"> Users Search</h1>
     <form class="example"  method="GET", action="users-search-api-v1-twitter">
       <input type="text" placeholder="Search.." name="search">
       <button type="submit"><i class="fa fa-search"></i></button>
