--- a/views/pages/results-search-tweets.ejs
+++ b/views/pages/results-search-tweets.ejs
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -64,7 +62,11 @@
             <% } %>
     <% }else{ %>
       
-      <%- include('error_tweets.ejs')%>
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+          <a href="/search-tweets"><span class="glyphicon glyphicon-book"></span>No results Please try again </a>
+        
+      </ul>
   <% } %>
   </div>
 
@@ -77,4 +79,3 @@
 
 </body>
 </html>
-
