--- a/views/pages/results-users-search.ejs
+++ b/views/pages/results-users-search.ejs
@@ -78,7 +78,11 @@
           <% } %>
   <% }else{ %>
       
-    <%- include('error_users.ejs')%>
+    <ul class="nav navbar-nav navbar-right">
+      <li>
+        <a href="/users-search"><span class="glyphicon glyphicon-book"></span>No results Please try again </a>
+      
+    </ul>
 <% } %>
   </div>
 
