--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,6 +5,11 @@
   <title>Home page</title>
   <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
+  <style>
+    body {
+  overflow: hidden; /* Hide scrollbars */
+  }
+  </style>
 </head>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
