--- a/views/pages/search-tweets.ejs
+++ b/views/pages/search-tweets.ejs
@@ -4,6 +4,11 @@
   <title>Search Tweets</title>
   <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
+  <style>
+    body {
+  overflow: hidden; /* Hide scrollbars */
+  }
+  </style>
 </head>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
