--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,7 +21,7 @@
 
 <body>
 
-  
+  ‏
   <!--Useful Links-->
 
   <nav class="navbar navbar-default navbar-static-top navbar-inverse">
@@ -33,10 +33,13 @@
         
       <ul class="nav navbar-nav navbar-right">
         <li class="navbar-right">
+          <a href="/sentiment-analysis"><span class="glyphicon glyphicon-book"></span> Twitter Sentiment Analysis </a>
+        </li>
+        <li class="navbar-right">
           <a href="/users-search"><span class="glyphicon glyphicon-book"></span> Twitter Users Search </a>
         </li>
         <li class="navbar-right">
-          <a href="/search-tweets"><span class="glyphicon glyphicon-book"></span> Search Tweets</a>
+          <a href="/search-tweets"><span class="glyphicon glyphicon-book"></span> Twitter Search Tweets</a>
         </li>
       </ul>
     </div>
