--- a/views/pages/results-users-search.ejs
+++ b/views/pages/results-users-search.ejs
@@ -27,10 +27,13 @@
         
         <ul class="nav navbar-nav navbar-right">
           <li class="navbar-right">
+            <a href="/sentiment-analysis"><span class="glyphicon glyphicon-book"></span> Twitter Sentiment Analysis </a>
+          </li>
+          <li class="navbar-right">
             <a href="/users-search"><span class="glyphicon glyphicon-book"></span> Twitter Users Search </a>
           </li>
           <li class="navbar-right">
-            <a href="/search-tweets"><span class="glyphicon glyphicon-book"></span> Search Tweets</a>
+            <a href="/search-tweets"><span class="glyphicon glyphicon-book"></span> Twitter Search Tweets</a>
           </li>
         </ul>
     </div>
