--- a/views/pages/error_tweets.ejs
+++ b/views/pages/error_tweets.ejs
@@ -21,7 +21,7 @@
         
         <ul class="nav navbar-nav navbar-right">
           <li class="navbar-right">
-            <a href="/sentiment-analysis"><span class="glyphicon glyphicon-book"></span> Twitter Sentiment Analysis </a>
+            <a href="https://clb-sentiment-analysis.herokuapp.com/"><span class="glyphicon glyphicon-book"></span> Twitter Sentiment Analysis </a>
           </li>
           <li class="navbar-right">
             <a href="/users-search"><span class="glyphicon glyphicon-book"></span> Twitter Users Search </a>
