--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,10 +14,9 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  
   </head>
   
-</head>
+
 
 <body>
 
@@ -32,6 +31,9 @@
         </li>
         
       <ul class="nav navbar-nav navbar-right">
+        <li class="navbar-right">
+          <a href="/sentiment-analysis-report/"><span class="glyphicon glyphicon-book"></span> Twitter Sentiment Analysis Report</a>
+        </li>
         <li class="navbar-right">
           <a href="https://clb-sentiment-analysis.herokuapp.com/"><span class="glyphicon glyphicon-book"></span> Twitter Sentiment Analysis </a>
         </li>
