--- a/views/pages/users-search.ejs
+++ b/views/pages/users-search.ejs
@@ -32,6 +32,9 @@
         
         <ul class="nav navbar-nav navbar-right">
           <li class="navbar-right">
+            <a href="/sentiment-analysis-report/"><span class="glyphicon glyphicon-book"></span> Twitter Sentiment Analysis Report</a>
+          </li>
+          <li class="navbar-right">
             <a href="https://clb-sentiment-analysis.herokuapp.com/"><span class="glyphicon glyphicon-book"></span> Twitter Sentiment Analysis </a>
           </li>
           <li class="navbar-right">
