--- a/views/pages/sentiment-analysis-report.ejs
+++ b/views/pages/sentiment-analysis-report.ejs
@@ -357,7 +357,8 @@ var chart11 = new CanvasJS.Chart("chartContainer11", {
 			{ x: new Date(2021, 7, 4), y: 0 },
 			{ x: new Date(2021, 7, 5), y: 0 },
 			{ x: new Date(2021, 7, 6), y: 0 },
-			{ x: new Date(2021, 7, 7), y: 0 }
+			{ x: new Date(2021, 7, 7), y: 0 },
+      { x: new Date(2021, 7, 8), y: 0 }
 		]
 	},
 	{
@@ -396,7 +397,7 @@ var chart11 = new CanvasJS.Chart("chartContainer11", {
 			{ x: new Date(2021, 7, 5), y: 29 },
 			{ x: new Date(2021, 7, 6), y: 49 },
 			{ x: new Date(2021, 7, 7), y: 34 },
-      { x: new Date(2021, 7, 7), y: 21 }
+      { x: new Date(2021, 7, 8), y: 21 }
 		]
 },
 {
@@ -415,7 +416,7 @@ var chart11 = new CanvasJS.Chart("chartContainer11", {
 			{ x: new Date(2021, 7, 5), y: 264 },
 			{ x: new Date(2021, 7, 6), y: 244 },
 			{ x: new Date(2021, 7, 7), y: 139 },
-      { x: new Date(2021, 7, 7), y: 139 }
+      { x: new Date(2021, 7, 8), y: 53 }
 		]
 
 	
