--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -16,12 +16,13 @@
   .jumbotron .lang-logo {
     display: block;
     overflow: hidden;
-    border-radius: 50px;
+    border-radius: 15px;
     width: 200px;  
-    height: 185px;
+    height: 170px;
     margin: auto; }
     .jumbotron .lang-logo img {
-      max-width: 100%; }
+      max-width: 100%;
+      }
 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
