--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -54,7 +54,7 @@
       <img src="/twitter-logo.jpg">
     </a>
     <h1 style="font-size:200%;"> About Us</h1>
-    <p>This site will help you find tweets on Twitter by entering a word or sequence of words and in addition search for Twitter users easily.</p>
+    <p style="text-align:left">This system allows you to get a complete picture regarding public opinion, we offer you a free and convenient system, with an amazing user experience, which can give you all the relevant information regarding users' tweets, make comparisons, and take the opportunity to see what the population thinks in emergencies /  Crisis in the country..</p>
       
   </div>
 
