--- a/views/pages/sentiment-analysis-report.ejs
+++ b/views/pages/sentiment-analysis-report.ejs
@@ -40,10 +40,9 @@
    
 		legendText: "כמות הציוצים לפי פרמטר",
 		
-    
+		// y: 6000, label: "סה\"כ ציוצים",color:"#00ffff"}, 
 		dataPoints: [     
-      { y: 6000, label: "סה\"כ ציוצים",color:"#00ffff"}, 
-   
+     		{ y: 671, label: "נטרלי",color:"#00ffff"}, 
 			{ y: 2598, label: "חיובי",color:"green"},
 			{ y: 2731,  label: "שלילי" ,color:"red"}
 		]
@@ -433,6 +432,89 @@ function toogleDataSeries(e){
 	}
 	chart11.render();
 }
+var chart12 = new CanvasJS.Chart("chartContainer12", {
+	animationEnabled: true,
+	title:{
+		text: "חיובי שלילי ע\"פ קטגוריה"
+	},
+	axisY: {
+		title: "",
+		includeZero: true
+	},
+	legend: {
+		cursor:"pointer",
+		itemclick : toggleDataSeries
+	},
+	toolTip: {
+		shared: true,
+		content: toolTipFormatter
+	},
+	data: [{
+		type: "bar",
+		showInLegend: true,
+		name: "שלילי",
+		color: "red",
+		dataPoints: [
+			{ y: 1775, label: "ארגונים ומוסדות" },
+			{ y: 955, label: "אזרחים" },
+			{ y: 409, label: "תושבי האזור" },
+			{ y: 1502, label: "תושבי ארה\"ב" },
+			{ y: 820, label: "שאר העולם" }
+		]
+	},
+	{
+		type: "bar",
+		showInLegend: true,
+		name: "חיובי",
+		color: "#33ccff",
+		dataPoints: [
+			{ y: 1818, label: "ארגונים ומוסדות" },
+			{ y: 779, label: "אזרחים" },
+			{ y: 390, label: "תושבי האזור" },
+			{ y: 1558, label: "תושבי ארה\"ב" },
+			{ y: 650, label: "שאר העולם" }
+		]
+	},
+	{
+		type: "bar",
+		showInLegend: true,
+		name: "נטרלי",
+		color: " #80ffaa",
+		dataPoints: [
+		    { y: 469, label: "ארגונים ומוסדות" },
+			{ y: 204, label: "אזרחים" },
+			{ y: 251, label: "תושבי האזור" },
+			{ y: 269, label: "תושבי ארה\"ב" },
+			{ y: 150, label: "שאר העולם" }
+		]
+	}]
+});
+chart12.render();
+
+function toolTipFormatter(e) {
+	var str = "";
+	var total = 0 ;
+	var str3;
+	var str2 ;
+	for (var i = 0; i < e.entries.length; i++){
+		var str1 = "<span style= \"color:"+e.entries[i].dataSeries.color + "\">" + e.entries[i].dataSeries.name + "</span>: <strong>"+  e.entries[i].dataPoint.y + "</strong> <br/>" ;
+		total = e.entries[i].dataPoint.y + total;
+		str = str.concat(str1);
+	}
+	str2 = "<strong>" + e.entries[0].dataPoint.label + "</strong> <br/>";
+	str3 = "<span style = \"color:Tomato\">Total: </span><strong>" + total + "</strong><br/>";
+	return (str2.concat(str)).concat(str3);
+}
+
+function toggleDataSeries(e) {
+	if (typeof (e.dataSeries.visible) === "undefined" || e.dataSeries.visible) {
+		e.dataSeries.visible = false;
+	}
+	else {
+		e.dataSeries.visible = true;
+	}
+	chart12.render();
+}
   }
   
   </script>
@@ -539,6 +621,15 @@ function toogleDataSeries(e){
         <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
       </td>
     </tr>
+	<tr>  
+		<td colspan=2>
+		  
+		  <div id="chartContainer12" style="height: 300px; width: 100%;"></div>
+		  <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+		  
+		</td>
+	  </tr>  
+	
   <tr>  
     <td colspan=2>
       
